Archive2/9d/4c02b40c67c2a6/output
main.cpp: In function 'int main(int, char**)':
main.cpp:16:59: warning: format '%d' expects argument of type 'int', but argument 2 has type 'char*' [-Wformat=]
     printf("Sortie : %d \n", SumCharsAndDigits(test) - '0');
                                                           ^
main.cpp: In function 'char* SumCharsAndDigits(const char*)':
main.cpp:71:21: error: invalid conversion from 'int' to 'char*' [-fpermissive]
  return (char)total + '0';
                     ^
